--- a/weapp/static_v2/js/dialog/termite_select_website_data_dialog/dialog.html
+++ b/weapp/static_v2/js/dialog/termite_select_website_data_dialog/dialog.html
@@ -2,16 +2,16 @@
 	<div class="modal fade xui-termiteSelectWebsiteDataDialog" id="termiteSelectWebsiteDataDialog">
 	<div class="modal-dialog modal-lg" style="width: 800px;">
 	<div class="modal-content">
-		<div class="modal-header" style="margin-bottom: 10px;">
+		<div class="modal-header" style="margin-bottom: 0px;">
 			<button aria-hidden="true" data-dismiss="modal" class="close" type="button"><span class="xui-closeColor" aria-hidden="true">&times;</span></button>
 			<h3 class="modal-title">
 				选择图文
 			</h3>
 		</div>
 		
-		<div class="modal-body" style="min-height: 300px; max-height: 600px; overflow: auto;">
-			<div class="mb10 clearfix">
-				<a href="/new_weixin/single_news/" target="_blank" class="btn btn-success xa-addItem w150"><span class="mr5 pr">+</span>新建<span class="xa-itemName"></span></a>
+		<div class="modal-body" style="padding-left:30px;padding-right:30px;">
+			<div class="clearfix">
+				<a href="/new_weixin/single_news/" target="_blank" class="btn btn-success xa-addItem w150 mt10 h30"><span class="mr5 pr">+</span>新建<span class="xa-itemName"></span></a>
 				<div class="fr">
 					<input class="form-control xa-query xui-search-text" value=""><span class="xa-search xui-searchBtn cursor-pointer btn btn-primary">搜索</span>
 				</div>
@@ -26,7 +26,7 @@
 				data-enable-sort="false"
 				data-item-count-per-page="8"
 				data-auto-load="false"
-				class="mb20"
+				class=""
 			></div>
 		</div>
 
@@ -41,7 +41,7 @@
 
 <script id="termite-select-website-data-dialog-table" type="text/x-jquery-tmpl">
 	{{if items.length > 0}}
-	<table id="pageTable" class="table table-bordered table-condensed xb-stripedTable xui-tablePosition">
+	<table id="pageTable" class="table table-bordered table-condensed xb-stripedTable xui-tablePosition m0">
 		<thead style="background:#c8d2e5;">
 			<tr>
 				<th>标题</th>
