[update] * 修改 代码
git-svn-id: http://s11/svn/weapp/web/trunk_2.0@16141 152f85a6-bef7-4f42-898c-89626e871b9b

--- a/weapp/static/ueditor-1.2.6.1/dialogs/link/link.html
+++ b/weapp/static/ueditor-1.2.6.1/dialogs/link/link.html
@@ -205,6 +205,7 @@
                 });
             };
         }else{
+            console.log('version 2')
             // 版本2.0
             var webSiteLinkView = parent.W.getSelectWebSiteLinkView({
                 el: '.edui-dialog.edui-for-link'
