--- a/weapp/static_v2/js/dialog/select_website_link_dialog/dialog.html
+++ b/weapp/static_v2/js/dialog/select_website_link_dialog/dialog.html
@@ -9,7 +9,7 @@
 			</h3>
 		</div>
 		
-		<div class="modal-body" style="min-height: 300px; max-height: 600px; overflow: auto;">
+		<div class="modal-body" style="padding-left:30px;padding-right:30px;">
 			<div class="mb10 clearfix xa-add-box {{if menuType == 'shengjingCustom'}}xui-hide{{/if}}">
 				<a href="/new_weixin/single_news/" target="_blank" class="btn btn-success xa-add-item w150"><span class="mr5 pr">+</span>创建单图文</a>
 				<div class="fr">
@@ -26,7 +26,7 @@
 				data-enable-sort="false"
 				data-item-count-per-page="8"
 				data-auto-load="false"
-				class="mb20"
+				class=""
 			></div>
 		</div>
 
@@ -41,7 +41,7 @@
 
 <script id="weixin-select-link-page-dialog-table" type="text/x-jquery-tmpl">
 	{{if items.length > 0}}
-	<table id="pageTable" class="table table-bordered table-condensed xb-stripedTable xui-tablePosition">
+	<table id="pageTable" class="table table-bordered table-condensed xb-stripedTable xui-tablePosition m0">
 		<thead style="background:#c8d2e5;">
 			<tr>
 				<th>名称</th>
