--- a/weapp/mobile_app/mobile_app/html/order.html
+++ b/weapp/mobile_app/mobile_app/html/order.html
@@ -8,6 +8,7 @@
 		<meta name="apple-mobile-web-app-status-bar-style" content="black">
 		<link rel="stylesheet" href="../css/mui.min.css" />
 		<link rel="stylesheet" href="../css/order.css" />
+		<link rel="stylesheet" href="../css/emojilc6cc2.css" />
 		
 		<script  src="../js/mui.min.js" ></script>
 		<script type="text/javascript" src="../js/app.js" ></script>
