--- a/weapp/mobile_app/mobile_app/html/order_detail.html
+++ b/weapp/mobile_app/mobile_app/html/order_detail.html
@@ -15,7 +15,7 @@
 		<script type="text/javascript" src="../js/jquery-2.1.3.min.js" ></script>
 		<script type="text/javascript" src="../js/config.js" ></script>
 		<script type="text/javascript" src="../js/system.js" ></script>
-		<script type="text/javascript" src="../js/order.js" ></script>
+		<!--<script type="text/javascript" src="../js/app_order.js" ></script>-->
 		<script type="text/javascript" src="../js/order_detail.js" ></script>
 	</head>
 	<body style="background-color:#FFFFFF">
