--- a/weapp/mobile_app/mobile_app/html/overview.html
+++ b/weapp/mobile_app/mobile_app/html/overview.html
@@ -9,12 +9,11 @@
 
 		<link rel="stylesheet" href="../css/mui.min.css">
 		<link rel="stylesheet" href="../css/overview.css" />
-
 		<script src="../js/mui.min.js"></script>
 		<script src="../js/jquery-2.1.3.min.js"></script>
+		<script src="../js/echarts_line.js"></script>
 		<script src="../js/baiduTemplate.js"></script>
 		<script src="../js/canvasjs.min.js"></script>
-		<!--<script src="../js/app.js"></script>-->
 		<script src="../js/config.js"></script>
 		<script src="../js/system.js"></script>
 		<script src="../js/overview.js"></script>
@@ -23,7 +22,8 @@
 		<div>
 			<div id="slider" class="mui-slider">
 				<div id="sliderSegmentedControl" class="mui-slider-indicator mui-segmented-control mui-segmented-control-inverted">
-					<a class="mui-control-item" href="#item1mobile">流量</a>
+					<!--<a class="mui-control-item" href="#item1mobile">流量</a>-->
+					<a class="mui-control-item" href="#item1mobile">概览</a>
 					<a class="mui-control-item" href="#item2mobile">销售</a>
 					<a class="mui-control-item" href="#item3mobile">订单</a>
 					<a class="mui-control-item" href="#item4mobile">会员</a>
@@ -33,7 +33,65 @@
 					<div id="item1mobile" class="mui-slider-item mui-control-content mui-active">
 						<div id="scroll1" class="mui-scroll-wrapper">
 							<div class="mui-scroll">
-								<div id="drewChart" style="width: 100%;height: 300px;"></div>
+								<table style="width: 100%;height: 30px; margin: 10px 0;">
+									<tr>
+										<td>微品牌价值</td>
+										<td>关注会员总数</td>
+										<td>总成交额</td>
+									</tr>
+									<tr>
+										<td class ='table_cell' id='brand_value'>0</td>
+										<td class ='table_cell' id='subscribed_member_count'>0</td>
+										<td class ='table_cell' id='all_deal_order_money'>0.00</td>
+									</tr>
+									<tr>
+										<td>总成交订单</td>
+										<td>今日成交额</td>
+										<td>今日订单</td>
+									</tr>
+									<tr>
+										<td class ='table_cell' id='all_deal_order_count'>0</td>
+										<td class ='table_cell' id='today_deal_money'>0.00</td>
+										<td class ='table_cell' id='today_deal_order_count'>0</td>
+									</tr>
+									<tr>
+										<td>待发货订单</td>
+										<td>待退款订单</td>
+										<td>未读消息数</td>
+									</tr>
+									<tr>
+										<td class ='table_cell' id='total_to_be_shipped_order_count'>0</td>
+										<td class ='table_cell' id='total_refunding_order_count'>0</td>
+										<td class ='table_cell' id='today_unread_message_count'>0</td>
+									</tr>
+								</table>
+								<hr />
+								<div>
+									<h4>微品牌价值趋势图</h4>
+									<ul class="week_month brand_value">
+										<li class="week active">周</li>&nbsp;<b style="font-size: 1.2em;">|</b>&nbsp;
+										<li class="month">月</li>
+									</ul>
+									<div id="brandChart" class="xui-chart-container" ></div>
+								</div>
+								<div>
+									<h4>销售趋势图</h4>
+									<ul class="week_month sale_chart">
+										<li class="week active">周</li>&nbsp;<b style="font-size: 1.2em;">|</b>&nbsp;
+										<li class="month" >月</li>
+									</ul>
+									<button onclick="getSalesData();" class="xui-chart-btn xa-sale-chart-btn">点击加载</button>
+									<div id="saleChart" class="xui-chart-container"></div>
+								</div>
+								<div>
+									<h4>订单趋势图</h4>
+									<ul class="week_month order_chart">
+										<li class="week active">周</li>&nbsp;<b style="font-size: 1.2em;">|</b>&nbsp;
+										<li class="month">月</li>
+									</ul>
+									<button onclick="getOrderData();" class="xui-chart-btn xa-order-chart-btn">点击加载</button>
+									<div id="orderChart" class="xui-chart-container"></div>
+								</div>
 							</div>
 						</div>
 					</div>
@@ -77,24 +135,10 @@
 			<div class="mui-popover-arrow"></div>
 			<div class="mui-scroll-wrapper">
 				<div class="mui-scroll">
-					<ul class="mui-table-view">
-						<li class="mui-table-view-cell flow" data-url="mobile_app/api/order_daily_trend/get/?days=7" data-title="每日订单数">
-							<a href="#">每日订单数</a>
-						</li>
-						<li class="mui-table-view-cell flow" data-url="mobile_app/api/sale_daily_trend/get/?days=7" data-title="每日销售额">
-							<a href="#">每日销售额</a>
-						</li>
-						<li class="mui-table-view-cell flow" data-url="mobile_app/api/message_daily_trend/get/?days=7" data-title="每日接收消息数">
-							<a href="#">每日接收消息数</a>
-						</li>
-						<li class="mui-table-view-cell flow" data-url="mobile_app/api/visit_daily_trend/get/?days=7" data-title="每日微站访问数">
-							<a href="#">每日微站访问数</a>
-						</li>
-					</ul>
+
 				</div>
 			</div>
 		</div>
-
 		<script>
 			mui.init({
 				swipeBack: false
@@ -103,54 +147,55 @@
 			mui('.mui-scroll-wrapper').scroll({
 				indicators: true //是否显示滚动条
 			});
-
-			var selectItem1 = '<ul class="mui-table-view"><li class="mui-table-view-cell flow" data-url="mobile_app/api/order_daily_trend/get/?days=7" data-title="每日订单数"><a href="#">每日订单数</a></li><li class="mui-table-view-cell flow" data-url="mobile_app/api/sale_daily_trend/get/?days=7" data-title="每日销售额"><a href="#">每日销售额</a></li><li class="mui-table-view-cell flow" data-url="mobile_app/api/message_daily_trend/get/?days=7" data-title="每日接收消息数"><a href="#">每日接收消息数</a></li><li class="mui-table-view-cell flow" data-url="mobile_app/api/visit_daily_trend/get/?days=7" data-title="每日微站访问数"><a href="#">每日微站访问数</a></li></ul>'
+//			var selectItem1 = '<ul class="mui-table-view"><li class="mui-table-view-cell flow" data-url="mobile_app/api/order_daily_trend/get/?days=7" data-title="每日订单数"><a href="#">每日订单数</a></li><li class="mui-table-view-cell flow" data-url="mobile_app/api/sale_daily_trend/get/?days=7" data-title="每日销售额"><a href="#">每日销售额</a></li><li class="mui-table-view-cell flow" data-url="mobile_app/api/message_daily_trend/get/?days=7" data-title="每日接收消息数"><a href="#">每日接收消息数</a></li><li class="mui-table-view-cell flow" data-url="mobile_app/api/visit_daily_trend/get/?days=7" data-title="每日微站访问数"><a href="#">每日微站访问数</a></li></ul>'
 			var selectItem2 = '<ul class="mui-table-view"><li class="mui-table-view-cell sale" data-url="order_by_day"><a href="#">按天统计</a></li><li class="mui-table-view-cell sale" data-url="order_by_week"><a href="#">按周统计</a></li><li class="mui-table-view-cell sale sale" data-url="order_by_month"><a href="#">按月统计</a></li></ul>'
 			var selectItem3 = '<ul class="mui-table-view"><li class="mui-table-view-cell order" data-url="order_by_status"><a href="#">状态统计</a></li><li class="mui-table-view-cell order" data-url="order_by_pay_type"><a href="#">支付方式统计</a></li><li class="mui-table-view-cell order" data-url="order_by_product"><a href="#">商品统计</a></li><li class="mui-table-view-cell order" data-url="order_by_source"><a href="#">来源统计</a></li></ul>'
 			var selectItem4 = '<ul class="mui-table-view"><li class="mui-table-view-cell member" data-url="user_source_by_day"><a href="#">会员来源-按日统计</a></li><li class="mui-table-view-cell member" data-url="user_source_by_week"><a href="#">会员来源-按周统计</a></li><li class="mui-table-view-cell member" data-url="user_static"><a href="#">会员统计</a></li></ul>'
-			var item1 = document.getElementById('item1mobile');
+//			var item1 = document.getElementById('item1mobile');
 			var item2 = document.getElementById('item2mobile');
 			var item3 = document.getElementById('item3mobile');
 			var item4 = document.getElementById('item4mobile');
 			var domPopover = document.getElementById('topPopover');
 			mui.plusReady(function(){
 				W.init();
-				drawChart('mobile_app/api/order_daily_trend/get/?days=7', '每日订单数');
-				var selectItems = document.getElementsByClassName("flow");
-				for(var i = 0; i < selectItems.length; i++ ) {
-					selectItems[i].addEventListener("click", function(){
-						plus.nativeUI.showWaiting();
-						var url = this.attributes["data-url"].value;
-						var title = this.attributes["data-title"].value;
-						drawChart(url, title);
-						mui('.mui-popover').popover('toggle');
+				plus.navigator.closeSplashscreen();
+				plus.webview.getWebviewById("tab").evalJS('toggle_menu("hide")');
+				overview_board();
+				getBrandData();
+				var  as = document.getElementsByClassName("week_month");
+
+				for(var i = 0; i < as.length; i++ ) {
+					as[i].addEventListener("click", function(event){
+						var $li = event.target;
+						var li_classname = $li.classList[0];
+						var $ul = $li.parentNode;
+						var classname = $ul.classList[1];
+						var $lis = $ul.children;
+						for (var j = 0; j < $lis.length; j++ ){
+							$lis[j].classList.remove('active');
+						}
+		    			$li.classList.add('active');
+		    			var argv = li_classname == "week" ? undefined : 'M';
+		    			if (classname == "order_chart"){
+	    					getOrderData(argv);
+		    			}else if (classname == "sale_chart"){
+	    					getSalesData(argv);
+		    			}else if (classname == "brand_value"){
+	    					getBrandData(argv);
+		    			}
 					});
+
 				}
-				
 				bindSlider();
 			});
 			//处理切换Tab页面数据的变化
 			function bindSlider(){
 				document.getElementById('slider').addEventListener('slide', function(e) {
 					if (e.detail.slideNumber === 0){
-						if (item1.querySelector('.mui-loading')) {
-							plus.nativeUI.closeWaiting();
-							drawChart('mobile_app/api/sale_daily_trend/get/?days=7', '每日销售额');
-						}
-						domPopover.querySelector('.mui-scroll').innerHTML = selectItem1;
-						mui('.mui-scroll-wrapper').scroll()[4].scrollTo(0,0);
-						var selectItems = document.getElementsByClassName("flow");
-						for(var i = 0; i < selectItems.length; i++ ) {
-							selectItems[i].addEventListener("click", function(){
-								plus.nativeUI.showWaiting();
-								var url = this.attributes["data-url"].value;
-								var title = this.attributes["data-title"].value;
-								drawChart(url, title);
-								mui('.mui-popover').popover('toggle');
-							});
-						}
-
+						plus.webview.getWebviewById("tab").evalJS('toggle_menu("hide")');
+						getFirstTabData();
 					}else if (e.detail.slideNumber === 1) {
+						plus.webview.getWebviewById("tab").evalJS('toggle_menu()');
 						if (item2.querySelector('.mui-loading')) {
 							url2action('order_by_day', 'item2mobile');
 						}
@@ -158,6 +203,7 @@
 						mui('.mui-scroll-wrapper').scroll()[4].scrollTo(0,0);
 						click2li("sale", 'item2mobile');
 					} else if (e.detail.slideNumber === 2) {
+						plus.webview.getWebviewById("tab").evalJS('toggle_menu()');
 						if (item3.querySelector('.mui-loading')) {
 							url2action('order_by_status', 'item3mobile');
 						}
@@ -165,6 +211,7 @@
 						mui('.mui-scroll-wrapper').scroll()[4].scrollTo(0,0);
 						click2li("order", 'item3mobile');
 					} else if (e.detail.slideNumber === 3) {
+						plus.webview.getWebviewById("tab").evalJS('toggle_menu()');
 						if (item4.querySelector('.mui-loading')) {
 							url2action('user_source_by_day', 'item4mobile');
 						}
@@ -476,6 +523,5 @@
 		</ul>
 	</div>
 	</script>
-
 	</body>
 </html>
