--- a/weapp/mobile_app/mobile_app/html/message.html
+++ b/weapp/mobile_app/mobile_app/html/message.html
@@ -9,6 +9,7 @@
 		<meta name="apple-mobile-web-app-status-bar-style" content="black">
 		<link rel="stylesheet" href="../css/mui.min.css">
 		<link rel="stylesheet" href="../css/message.css">
+		<link rel="stylesheet" href="../css/emojilc6cc2.css" />
 		<script src="../js/mui.min.js"></script>
 		<script src="../js/jquery-2.1.3.min.js"></script>
 		<script src="../js/baiduTemplate.js"></script>
@@ -30,33 +31,29 @@
 
 	</body>
 	<script type="text/template" id="messages_list_template">
-				<% if (iterms.length <= 1){ %>
-					showNoMessage();
-				<% }else{ %>
-					<ul class="mui-table-view">
-						<% for (var i=0;i<iterms.length;i++){var session = iterms[i] ;%>
-							<li class="mui-table-view-cell mui-media">
-								<a s_id="<%=session.id%>" onclick="openHisWindow(this);">
-									<div class="fl">
-										<img class="mui-media-object mui-pull-left" style="border-radius: 30px;" src="<%=session.weixin_user_icon%>" onerror="javascript:this.src='../img/user-1.jpg'">
-										<div class="mui-media-body">
-										<b><%-session.sender_name%></b><% if(session.member_remarks_name && session.member_remarks_name != ""){%>
-												(<%=session.member_remarks_name%>)<%}else{%>(备注)<%}%>
-										<p class="msg"><%-session.content%></p>
-									</div>
-									</div>
-									<div class="fr">
-										<p class="time"><%=session.created_at%></p>
-										<% if(session.unread_count != 0){ %>
-											<span class="mui-badge mui-badge-danger"  id="new_message_<%=session.id%>"><%=session.unread_count%></span>
-										<% }%>
+		<ul class="mui-table-view">
+			<% for (var i=0;i<iterms.length;i++){var session = iterms[i] ;%>
+				<li class="mui-table-view-cell mui-media">
+					<a s_id="<%=session.id%>" onclick="openHisWindow(this);">
+						<div class="fl">
+							<img class="mui-media-object mui-pull-left" style="border-radius: 30px;" src="<%=session.weixin_user_icon%>" onerror="javascript:this.src='../img/user-1.jpg'">
+							<div class="mui-media-body">
+							<b><%-session.sender_name%></b><% if(session.member_remarks_name && session.member_remarks_name != ""){%>
+									(<%=session.member_remarks_name%>)<%}else{%>(备注)<%}%>
+							<p class="msg"><%-session.content%></p>
+						</div>
+						</div>
+						<div class="fr">
+							<p class="time"><%=session.created_at%></p>
+							<% if(session.unread_count != 0){ %>
+								<span class="mui-badge mui-badge-danger"  id="new_message_<%=session.id%>"><%=session.unread_count%></span>
+							<% }%>
 
-									</div>
-									<div class="clear"></div>
-								</a>
-							</li>
-						<%}%>
-					</ul>
-				<%}%>
-			</script>
+						</div>
+						<div class="clear"></div>
+					</a>
+				</li>
+			<%}%>
+		</ul>
+	</script>
 </html>
