--- a/weapp/static_v2/js/dialog/select_website_link_dialog/dialog.html
+++ b/weapp/static_v2/js/dialog/select_website_link_dialog/dialog.html
@@ -26,6 +26,7 @@
 				data-enable-sort="false"
 				data-item-count-per-page="8"
 				data-auto-load="false"
+				data-method="post"
 				class=""
 			></div>
 		</div>
