--- a/weapp/static_v2/js/dialog/member_page_select_coupon_dialog/dialog.html
+++ b/weapp/static_v2/js/dialog/member_page_select_coupon_dialog/dialog.html
@@ -59,7 +59,7 @@
                 {{/if}}
                 </td>
                 <td>${coupon.money}</td>
-                <td>${coupon.start_time}<div style="line-height:8px;"</div>${coupon.end_time}</td>
+                <td>${coupon.start_time}<div style="line-height:8px;"></div>${coupon.end_time}</td>
                 {{if coupon.limit_counts > 0}}
                     <td>每人${coupon.limit_counts}张</td>
                 {{else}}
