--- a/weapp/static_v2/js/dialog/member_relations_info/dialog.html
+++ b/weapp/static_v2/js/dialog/member_relations_info/dialog.html
@@ -58,7 +58,7 @@
 								<img src="{{if user_icon}}${user_icon}{{else}}/static/aa.jpg{{/if}}" onerror="this.src='/static/img/user-1.jpg'"style="width:42px;" />
 								</a>
 								<div style="display: table-cell;vertical-align:top;padding-left:8px; line-height:21px;text-align:left;">
-									<a href="/member/member_detail/edit/?id=${id}" >{{html username}}</a>
+									<a href="/member/member_detail/edit/?id=${id}" >ggggggggggg{{html username}}</a>
 									<div>${grade_name}</div>
 								</div>
 							</div>
