提交class类名错误

--- a/weapp/static_v2/js/dialog/member_page_select_coupon_dialog/dialog.html
+++ b/weapp/static_v2/js/dialog/member_page_select_coupon_dialog/dialog.html
@@ -23,7 +23,7 @@
         </div>
 
         <div class="modal-footer modal-footerBg">
-            <button class="btn btn-default xui-btnStyle xa-member-coupon-send" style="width:110px;height:36px;background-color:#207cbe; color:#ffffff;font-weight:bold;">发&nbsp;&nbsp;放</button>
+            <button class="btn btn-success xui-btnStyle xa-member-coupon-send" style="width:110px;height:36px;background-color:#207cbe; color:#ffffff;font-weight:bold;">发&nbsp;&nbsp;放</button>
             <br/>
             <div class="xui-hint xa-member-info-block hide" style="float:left">
             <p class="xa-member-info"></p></div>
