--- a/weapp/static_v2/js/dialog/member_relations_info/dialog.html
+++ b/weapp/static_v2/js/dialog/member_relations_info/dialog.html
@@ -85,11 +85,7 @@
 
 					    {{if data.only_fans==0}}
 							<td >
-							{{if log.father_id > 0}}
-								<a href="/member/member_detail/edit/?id=${id}" >${log.father_name}</a>
-							{{else}}
-								${log.father_name}
-							{{/if}}
+								<a href="/member/member_detail/edit/?id=${log.father_id}" >${log.father_name}</a>
 							</td>
 						{{/if}}
 					    <td >${log.created_at} </td>
