--- a/weapp/static_v2/js/dialog/select_coupon_dialog/dialog.html
+++ b/weapp/static_v2/js/dialog/select_coupon_dialog/dialog.html
@@ -7,7 +7,7 @@
             <h3 class="modal-title">选择优惠券</h3>
         </div>
 
-        <div class="modal-body" style="min-height: 300px; max-height: 500px; overflow: auto;">
+        <div class="modal-body" style="min-height: 300px; overflow: auto;">
             <div
                     data-ui-role="advanced-table"
                     data-app="mall2"
@@ -63,7 +63,7 @@
             </tr>
         {{/each}}
     {{else}}
-        <tr ><td colspan='7' class="h120" >暂无数据</td></tr>
+        <tr ><td colspan='7' class="h130" >暂无数据</td></tr>
     {{/if}}
 
     </tbody>
