--- a/weapp/static_v2/js/dialog/member_page_select_coupon_dialog/dialog.html
+++ b/weapp/static_v2/js/dialog/member_page_select_coupon_dialog/dialog.html
@@ -7,7 +7,7 @@
             <h3 class="modal-title">选择优惠券</h3>
         </div>
 
-        <div class="modal-body" style="min-height: 200px; max-height: 500px; overflow: auto;">
+        <div class="modal-body" style="min-height: 200px;overflow: auto;">
             <div
                     data-ui-role="advanced-table"
                     data-app="mall2"
@@ -23,7 +23,7 @@
         </div>
 
         <div class="modal-footer modal-footerBg">
-            <button class="btn btn-success xui-btnStyle xa-member-coupon-send" style="width:110px;height:36px;background-color:#207cbe; color:#ffffff;font-weight:bold;">发&nbsp;&nbsp;放</button>
+            <button class="btn btn-success xui-btnStyle xa-member-coupon-send" style="width:110px;height:36px;background-color:#207cbe; color:#ffffff;font-weight:bold;">发&nbsp;&nbsp;&nbsp;&nbsp;放</button>
             <br/>
             <div class="xui-hint xa-member-info-block hide" style="float:left">
             <p class="xa-member-info"></p></div>
