对话框优惠券数据选择

--- a/weapp/static_v2/js/dialog/member_page_select_coupon_dialog/dialog.html
+++ b/weapp/static_v2/js/dialog/member_page_select_coupon_dialog/dialog.html
@@ -85,7 +85,7 @@
                     <span class="xui-btngroup">
                         <span class="xa-down xui-down xui-btn" >-</span>
                         <span class="xui-counterText xa-counterText">1</span>
-                        <span class="xa-up xui-up {{if coupon.remained_count ==1 || coupon.limit_counts ==1 || (coupon.member_count*2)>coupon.remained_count}}xui-btn{{/if}}" >+</span>
+                        <span class="xa-up xui-up {{if coupon.remained_count ==1 || coupon.limit_counts ==1}}xui-btn{{/if}}" >+</span>
                     </span>
                     <div class="hide errorHint">库存不足</div>
                 {{else}}
