--- a/weapp/static_v2/js/dialog/member_page_select_coupon_dialog/dialog.html
+++ b/weapp/static_v2/js/dialog/member_page_select_coupon_dialog/dialog.html
@@ -87,7 +87,7 @@
                         <span class="xui-counterText xa-counterText">1</span>
                         <span class="xa-up xui-up {{if coupon.remained_count ==1 || coupon.limit_counts ==1}}xui-btn{{/if}}" >+</span>
                     </span>
-                    <div class="hide errorHint">库存不足</div>
+                    <div class=" errorHint">库存不足</div>
                 {{else}}
                     <span class="errorHint">库存不足</span>
                 {{/if}}
