--- a/weapp/static_v2/js/dialog/select_coupon_dialog/dialog.html
+++ b/weapp/static_v2/js/dialog/select_coupon_dialog/dialog.html
@@ -63,7 +63,7 @@
             </tr>
         {{/each}}
     {{else}}
-        <tr ><td colspan='7' class="h130" style="color:#666">还没有优惠券可供选择</td></tr>
+        <tr ><td colspan='7' class="h130" style="color:#666">暂无数据</td></tr>
     {{/if}}
 
     </tbody>
