去掉暂无数据的加粗显示

--- a/weapp/static_v2/js/dialog/member_relations_info/dialog.html
+++ b/weapp/static_v2/js/dialog/member_relations_info/dialog.html
@@ -93,7 +93,7 @@
 							</tr>
 					{{/each}}
 					{{else}}
-						<tr rowspan='2' ><td colspan='5' class="h130 xui-fontBold xui-fontGary" >暂无数据</td></tr>
+						<tr rowspan='2' ><td colspan='5' class="h130 xui-fontGary" >暂无数据</td></tr>
 					{{/if }}
 
 					</tbody>
