--- a/weapp/static_v2/js/dialog/add_product_model_property_value/dialog.html
+++ b/weapp/static_v2/js/dialog/add_product_model_property_value/dialog.html
@@ -4,17 +4,17 @@
 	<div class="modal-content">
 		<div class="modal-header">
 			<button aria-hidden="true" data-dismiss="modal" class="close" type="button"><span aria-hidden="true">&times;</span></button>
-			<h3 class="modal-title">创建规格值</h3>
+			<h3 class="modal-title xa-modal-title">创建规格值</h3>
 		</div>
 		<div class="modal-body">
-			<div class="form-inline" style="">
-				<div class="form-group" style="margin-top:-20px;">
+			<div class="form-inline clearfix" style="">
+				<div class="form-group" style="position:absolute;top:20px">
 					<span class="star_show"></span>
 					<input class="form-control" name="name" type="text" data-validate="require-notempty" maxlength="15"/>
 					<div class="errorHint"></div>
 				</div>
 
-				<div class="form-group ml80 pt20">
+				<div class="form-group pt10" style="padding-left:250px;">
 					<input 
 						data-ui-role="image-selector"
 						type="hidden" 
@@ -28,7 +28,7 @@
 			
 		</div>
 		<div class="modal-footer">
-			<button class="btn xa-submit-dialog btn-primary">确&nbsp;认</button>
+			<button class="btn xa-submit-dialog btn-primary">确&nbsp;定</button>
 		</div>
 	</div>
 	</div>
