修复 【百宝箱-投票】点击会员详情，是404   BUG4202

--- a/weapp/market_tools/tools/test_game/js/dialog/jion_user_dialog/dialog.html
+++ b/weapp/market_tools/tools/test_game/js/dialog/jion_user_dialog/dialog.html
@@ -21,7 +21,7 @@
 
 		<div class="column_block">
 			<div>
-				<a href="/user_center/member/${id}/">{{html username}}</a>
+				<a href="/member/member_detail/edit/?id=${id}">{{html username}}</a>
 			</div>
 
 			<div>
