--- a/weapp/market_tools/tools/vote/js/dialog/voted_members_dialog/dialog.html
+++ b/weapp/market_tools/tools/vote/js/dialog/voted_members_dialog/dialog.html
@@ -21,7 +21,7 @@
 
 		<div class="column_block">
 			<div>
-				<a href="/user_center/member/${id}/">{{html username}}</a>
+				<a href="/member/member_detail/edit/?id=${id}">{{html username}}</a>
 			</div>
 
 			<div>
