会员详情链接修改

--- a/weapp/market_tools/tools/vote/js/dialog/voted_members_dialog/dialog.html
+++ b/weapp/market_tools/tools/vote/js/dialog/voted_members_dialog/dialog.html
@@ -14,7 +14,7 @@
 <script id="voted-members-dialog-one-member-tmpl-src" type="text/x-jquery-tmpl">
 	<div data-id="${id}" class="one-member-block">
 		<div class="column_block">
-			<a href="/user_center/member/${id}/">
+			<a href="/member/member_detail/edit/?id=${id}">
 			<img class="member_head_img" src="{{if user_icon}}${user_icon}{{else}}/static/img/user-1.jpg{{/if}}" onerror="this.src='/static/img/user-1.jpg'"/>
 			</a>
 		</div>
