--- a/weapp/apps/customerized_apps/vote/static/js/dialog/view_participance_data_dialog/dialog.html
+++ b/weapp/apps/customerized_apps/vote/static/js/dialog/view_participance_data_dialog/dialog.html
@@ -16,7 +16,7 @@
 	</div>
 </script>
 
-
+{% verbatim %}
 <script id="app-vote-viewParticipanceResultDialog-dialog-tmpl" type="text/x-handlebar-tmpl">
     <h2 class="xui-result_fr-desc">"{{webapp_user_name}}"填写的内容</h2>
     <table class="table table-bordered xui-result_fr_table">
@@ -28,3 +28,4 @@
     {{/each}}
     </table>
 </script>
+{% endverbatim %}
