--- a/weapp/static_v2/js/dialog/member_relations_info/dialog.html
+++ b/weapp/static_v2/js/dialog/member_relations_info/dialog.html
@@ -39,8 +39,8 @@
 				<thead style="background:#c8d2e5;">
 				<tr class="">
 					<th width="180">会员</th>
-					<th width="94" class="tx_sortable xui-colorBlue" data-sort-attr='-pay_money'>消费金额</th>
-					<th width="100" class="tx_sortable xui-colorBlue" data-sort-attr='-integral'>积分</th>
+					<th width="94" class="tx_sortable xui-colorBlue" data-sort-attr='pay_money' data-sort-direction="up">消费金额</th>
+					<th width="100" class="tx_sortable xui-colorBlue" data-sort-attr='integral' data-sort-direction="up">积分</th>
 					<th width="100">来源</th>
 					{{if data.only_fans==0}}
 						<th width="150">推荐人</th>
