修改好友列表点击时间排序 第一次倒序

--- a/weapp/static_v2/js/dialog/member_relations_info/dialog.html
+++ b/weapp/static_v2/js/dialog/member_relations_info/dialog.html
@@ -45,7 +45,7 @@
 					{{if data.only_fans==0}}
 						<th width="150">推荐人</th>
 					{{/if}}
-					<th width="90" class="tx_sortable xui-colorBlue" data-sort-attr='created_at' data-init-sort="-created_at" data-sort-direction="down">时间</th>
+					<th width="90" class="tx_sortable xui-colorBlue" data-sort-attr='created_at' data-init-sort="-created_at" data-sort-direction="up">时间</th>
 				</tr>
 				</thead>
 
